--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,5 +15,9 @@
         android:id="@+id/navigation_weather"
         android:icon="@drawable/ic_baseline_cloud_24"
         android:title="@string/title_weather" />
+    <item
+        android:id="@+id/navigation_watch"
+        android:icon="@drawable/ic_baseline_watch_later_24"
+        android:title="@string/title_watch" />
 
 </menu>
