--- a/app/src/main/res/layout/watch_fragment.xml
+++ b/app/src/main/res/layout/watch_fragment.xml
@@ -8,26 +8,25 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="437dp"
+        android:layout_height="356dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.618">
 
         <TextView
             android:id="@+id/textView_timer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/time"
-            android:textSize="60sp"
             android:gravity="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:text="@string/time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="60sp" />
 
         <Button
             android:id="@+id/button_start"
