--- a/app/src/main/res/layout/watch_fragment.xml
+++ b/app/src/main/res/layout/watch_fragment.xml
@@ -11,13 +11,14 @@
         android:layout_width="437dp"
         android:layout_height="356dp"
         android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.618">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textView_timer"
